<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/padding_end_pad_calculator"
    android:paddingStart="0dp"
    android:id="@+id/tableCalculator">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnPercent"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/percent"
            android:onClick="appendPercent"/>
        <Button
            android:id="@+id/btnOpenParentheses"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/open_parentheses"/>
        <Button
            android:id="@+id/btnCloseParentheses"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/close_parentheses"/>
        <ImageButton
            android:id="@+id/btnClear"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/red_500"
            android:backgroundTintMode="add"
            app:tint="@color/white"
            android:src="@drawable/ic_backspace"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn7"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_7"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn8"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_8"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn9"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_9"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btnDivide"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/divide"
            android:onClick="appendOperator"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn4"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_4"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn5"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_5"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn6"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_6"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btnMultiply"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/multiply"
            android:onClick="appendOperator"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn1"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_1"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn2"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_2"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btn3"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_3"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btnAdd"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/add"
            android:onClick="appendOperator"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnDot"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/dot"
            android:onClick="appendDot"/>
        <Button
            android:id="@+id/btn0"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/_0"
            android:onClick="appendNumber"/>
        <Button
            android:id="@+id/btnEqual"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/green_500"
            android:text="@string/equal"
            android:onClick="getEqualResult" />
        <Button
            android:id="@+id/btnSubtract"
            style="@style/ThemeButtonCalculatorWeight"
            android:background="@drawable/bg_round"
            android:text="@string/subtract"
            android:onClick="appendOperator"/>
    </TableRow>
</TableLayout>