<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">
        <TextView
            android:id="@+id/titleInput"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/input_db"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/textInputDb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/titleInput"
            android:layout_alignParentTop="true"
            android:textColor="@color/grey_700"
            android:textSize="18sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/titleResult"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleInput"
            android:layout_marginTop="8dp"
            android:text="@string/result_db"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/textResultDb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/titleResult"
            android:layout_below="@+id/textInputDb"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_700"
            android:textSize="18sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/titleCratedAt"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleResult"
            android:layout_marginTop="8dp"
            android:text="@string/created_at_db"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/textCreatedAtDb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/titleResult"
            android:layout_below="@+id/textResultDb"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_700"
            android:textSize="18sp"
            android:padding="4dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>